Integrated database with JPA and update models, DTOs, services and Liquibase configs